guardar cambios antes de rebase

--- a/extraccion.ipynb
+++ b/extraccion.ipynb
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID='540ba0d5c2564cdeb246ace0d1ada7cf'\n",
-    "CLIENT_SECRET='dcad0c99f6304377b3980b8a811ffe9e'\n",
+    "CLIENT_ID=\n",
+    "CLIENT_SECRET=\n",
     "def get_token():\n",
     "    auth_string = CLIENT_ID+\":\"+CLIENT_SECRET \n",
     "    auth_bytes = auth_string.encode(\"utf-8\")\n",
