--- a/extraccion.ipynb
+++ b/extraccion.ipynb
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID=\n",
-    "CLIENT_SECRET=\n",
+    "CLIENT_ID= # Cada uno poner el suyo\n",
+    "CLIENT_SECRET= # Cada uno poner el suyo\n",
     "def get_token():\n",
     "    auth_string = CLIENT_ID+\":\"+CLIENT_SECRET \n",
     "    auth_bytes = auth_string.encode(\"utf-8\")\n",
