--- a/Transform.ipynb
+++ b/Transform.ipynb
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(374, 15)\n"
+      "(379, 15)\n"
      ]
     },
     {
@@ -296,7 +296,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>6 DE FEBRERO</td>\n",
-       "      <td>75</td>\n",
+       "      <td>74</td>\n",
        "      <td>175584</td>\n",
        "      <td>Aitana</td>\n",
        "      <td>NaN</td>\n",
@@ -336,7 +336,7 @@
        "      <td>169917</td>\n",
        "      <td>ROSÉ</td>\n",
        "      <td>k-pop</td>\n",
-       "      <td>85</td>\n",
+       "      <td>84</td>\n",
        "      <td>Bruno Mars</td>\n",
        "      <td>False</td>\n",
        "      <td>APT.</td>\n",
@@ -354,7 +354,7 @@
        "   top        track_name  track_popularity  duration_ms  artist_name  \\\n",
        "0    1  no tiene sentido                93       158036        Beéle   \n",
        "1    2          Ordinary                96       186964  Alex Warren   \n",
-       "2    3      6 DE FEBRERO                75       175584       Aitana   \n",
+       "2    3      6 DE FEBRERO                74       175584       Aitana   \n",
        "3    4        blackout 🧊                84       182282       Emilia   \n",
        "4    5              APT.                94       169917         ROSÉ   \n",
        "\n",
@@ -363,7 +363,7 @@
        "1                                   NaN                 90                NaN   \n",
        "2                                   NaN                 80                NaN   \n",
        "3                        argentine trap                 80  TINI|Nicki Nicole   \n",
-       "4                                 k-pop                 85         Bruno Mars   \n",
+       "4                                 k-pop                 84         Bruno Mars   \n",
        "\n",
        "   explicit         album    type relase_date                track_id  \\\n",
        "0     False       BORONDO   album  2025-05-15  1HEwEN64NjgTaHmo7LfkX8   \n",
@@ -551,11 +551,7 @@
    "outputs": [],
    "source": [
     "df[\"track_name\"]=df[\"track_name\"].map(lambda x : x.lower())\n",
-    "genres=[]\n",
-    "for genre in df['artist_genres']:\n",
-    "    genres.append(str(genre).split(\"|\"))\n",
-    "\n",
-    "df['artist_genres'] = genres\n"
+    "df['artist_genres'] = df['artist_genres'].map(lambda x: x.split(\"|\") if isinstance(x, str) else x)"
    ]
   },
   {
@@ -581,16 +577,16 @@
       "   top        track_name  track_popularity  duration_ms  artist_name  \\\n",
       "0    1  no tiene sentido                93       158036        Beéle   \n",
       "1    2          ordinary                96       186964  Alex Warren   \n",
-      "2    3      6 de febrero                75       175584       Aitana   \n",
+      "2    3      6 de febrero                74       175584       Aitana   \n",
       "3    4        blackout 🧊                84       182282       Emilia   \n",
       "4    5              apt.                94       169917         ROSÉ   \n",
       "\n",
       "                              artist_genres  artist_popularity  \\\n",
       "0  [latin afrobeats, reggaeton, pop urbano]                 93   \n",
-      "1                                     [nan]                 90   \n",
-      "2                                     [nan]                 80   \n",
+      "1                                       NaN                 90   \n",
+      "2                                       NaN                 80   \n",
       "3                          [argentine trap]                 80   \n",
-      "4                                   [k-pop]                 85   \n",
+      "4                                   [k-pop]                 84   \n",
       "\n",
       "                feats  explicit         album    type relase_date  \\\n",
       "0                 NaN     False       BORONDO   album  2025-05-15   \n",
@@ -754,7 +750,7 @@
        "      <td>96</td>\n",
        "      <td>186964</td>\n",
        "      <td>Alex Warren</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>90</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
@@ -770,10 +766,10 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>6 de febrero</td>\n",
-       "      <td>75</td>\n",
+       "      <td>74</td>\n",
        "      <td>175584</td>\n",
        "      <td>Aitana</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>80</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
@@ -805,13 +801,13 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>369</th>\n",
+       "      <th>374</th>\n",
        "      <td>96</td>\n",
        "      <td>better off (alone, pt. iii)</td>\n",
        "      <td>77</td>\n",
        "      <td>151702</td>\n",
        "      <td>Alan Walker</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>82</td>\n",
        "      <td>Dash Berlin, Vikkstar</td>\n",
        "      <td>False</td>\n",
@@ -824,13 +820,13 @@
        "      <td>2:31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>370</th>\n",
+       "      <th>375</th>\n",
        "      <td>97</td>\n",
        "      <td>won't forget you</td>\n",
        "      <td>55</td>\n",
        "      <td>398663</td>\n",
        "      <td>Shouse</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>69</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
@@ -843,14 +839,14 @@
        "      <td>6:38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>371</th>\n",
+       "      <th>376</th>\n",
        "      <td>98</td>\n",
        "      <td>desire</td>\n",
        "      <td>74</td>\n",
        "      <td>179161</td>\n",
        "      <td>Calvin Harris</td>\n",
        "      <td>edm</td>\n",
-       "      <td>90</td>\n",
+       "      <td>89</td>\n",
        "      <td>Sam Smith</td>\n",
        "      <td>False</td>\n",
        "      <td>Desire (with Sam Smith)</td>\n",
@@ -862,13 +858,13 @@
        "      <td>2:59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>372</th>\n",
+       "      <th>377</th>\n",
        "      <td>99</td>\n",
        "      <td>one in a million</td>\n",
        "      <td>68</td>\n",
        "      <td>160529</td>\n",
        "      <td>Bebe Rexha</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>80</td>\n",
        "      <td>David Guetta</td>\n",
        "      <td>False</td>\n",
@@ -881,14 +877,14 @@
        "      <td>2:40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>373</th>\n",
+       "      <th>378</th>\n",
        "      <td>100</td>\n",
        "      <td>apt.</td>\n",
        "      <td>94</td>\n",
        "      <td>169917</td>\n",
        "      <td>ROSÉ</td>\n",
        "      <td>k-pop</td>\n",
-       "      <td>85</td>\n",
+       "      <td>84</td>\n",
        "      <td>Bruno Mars</td>\n",
        "      <td>False</td>\n",
        "      <td>APT.</td>\n",
@@ -901,7 +897,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>526 rows × 16 columns</p>\n",
+       "<p>532 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -910,26 +906,26 @@
        "0      1             no tiene sentido                93       158036   \n",
        "0      1             no tiene sentido                93       158036   \n",
        "1      2                     ordinary                96       186964   \n",
-       "2      3                 6 de febrero                75       175584   \n",
+       "2      3                 6 de febrero                74       175584   \n",
        "..   ...                          ...               ...          ...   \n",
-       "369   96  better off (alone, pt. iii)                77       151702   \n",
-       "370   97             won't forget you                55       398663   \n",
-       "371   98                      desire                 74       179161   \n",
-       "372   99             one in a million                68       160529   \n",
-       "373  100                         apt.                94       169917   \n",
+       "374   96  better off (alone, pt. iii)                77       151702   \n",
+       "375   97             won't forget you                55       398663   \n",
+       "376   98                      desire                 74       179161   \n",
+       "377   99             one in a million                68       160529   \n",
+       "378  100                         apt.                94       169917   \n",
        "\n",
        "       artist_name    artist_genres  artist_popularity                  feats  \\\n",
        "0            Beéle  latin afrobeats                 93                    NaN   \n",
        "0            Beéle        reggaeton                 93                    NaN   \n",
        "0            Beéle       pop urbano                 93                    NaN   \n",
-       "1      Alex Warren              nan                 90                    NaN   \n",
-       "2           Aitana              nan                 80                    NaN   \n",
+       "1      Alex Warren              NaN                 90                    NaN   \n",
+       "2           Aitana              NaN                 80                    NaN   \n",
        "..             ...              ...                ...                    ...   \n",
-       "369    Alan Walker              nan                 82  Dash Berlin, Vikkstar   \n",
-       "370         Shouse              nan                 69                    NaN   \n",
-       "371  Calvin Harris              edm                 90              Sam Smith   \n",
-       "372     Bebe Rexha              nan                 80           David Guetta   \n",
-       "373           ROSÉ            k-pop                 85             Bruno Mars   \n",
+       "374    Alan Walker              NaN                 82  Dash Berlin, Vikkstar   \n",
+       "375         Shouse              NaN                 69                    NaN   \n",
+       "376  Calvin Harris              edm                 89              Sam Smith   \n",
+       "377     Bebe Rexha              NaN                 80           David Guetta   \n",
+       "378           ROSÉ            k-pop                 84             Bruno Mars   \n",
        "\n",
        "     explicit                    album    type relase_date  \\\n",
        "0       False                  BORONDO   album  2025-05-15   \n",
@@ -938,11 +934,11 @@
        "1       False                 Ordinary  single  2025-02-07   \n",
        "2       False             6 DE FEBRERO  single  2025-05-05   \n",
        "..        ...                      ...     ...         ...   \n",
-       "369     False              Walkerworld   album  2023-11-10   \n",
-       "370     False         Won't Forget You  single  2022-02-04   \n",
-       "371     False  Desire (with Sam Smith)  single  2023-07-28   \n",
-       "372     False         One in a Million  single  2023-08-04   \n",
-       "373     False                     APT.  single  2024-10-18   \n",
+       "374     False              Walkerworld   album  2023-11-10   \n",
+       "375     False         Won't Forget You  single  2022-02-04   \n",
+       "376     False  Desire (with Sam Smith)  single  2023-07-28   \n",
+       "377     False         One in a Million  single  2023-08-04   \n",
+       "378     False                     APT.  single  2024-10-18   \n",
        "\n",
        "                   track_id               artist_id                list  \\\n",
        "0    1HEwEN64NjgTaHmo7LfkX8  7a0XAaPaK2aDSqa8p3QnC7  Los 40 Principales   \n",
@@ -951,11 +947,11 @@
        "1    6qqrTXSdwiJaq8SO0X2lSe  0fTSzq9jAh4c36UVb4V7CB  Los 40 Principales   \n",
        "2    2TCUMmklsJTLWHnoU4mSQ4  7eLcDZDYHXZCebtQmVFL25  Los 40 Principales   \n",
        "..                      ...                     ...                 ...   \n",
-       "369  0SML6wWerD0yI2Xd4OUC1R  7vk5e3vY1uw9plTHJAMwjN      Shazam Top 200   \n",
-       "370  08DprFlcwlc5zny9ErPkHG  2TcGJdSOiOvITBzhvfX8XB      Shazam Top 200   \n",
-       "371  22dUzMFttcR3uU17NcOAIv  7CajNmpbOovFoOoasH2HaY      Shazam Top 200   \n",
-       "372  3YfGTvsTAWGC2lgoDOikUz  64M6ah0SkkRsnPGtGiRAbb      Shazam Top 200   \n",
-       "373  5vNRhkKd0yEAg8suGBpjeY  3eVa5w3URK5duf6eyVDbu9      Shazam Top 200   \n",
+       "374  0SML6wWerD0yI2Xd4OUC1R  7vk5e3vY1uw9plTHJAMwjN      Shazam Top 200   \n",
+       "375  08DprFlcwlc5zny9ErPkHG  2TcGJdSOiOvITBzhvfX8XB      Shazam Top 200   \n",
+       "376  22dUzMFttcR3uU17NcOAIv  7CajNmpbOovFoOoasH2HaY      Shazam Top 200   \n",
+       "377  3YfGTvsTAWGC2lgoDOikUz  64M6ah0SkkRsnPGtGiRAbb      Shazam Top 200   \n",
+       "378  5vNRhkKd0yEAg8suGBpjeY  3eVa5w3URK5duf6eyVDbu9      Shazam Top 200   \n",
        "\n",
        "    duracion_mins_segs  \n",
        "0                 2:38  \n",
@@ -964,13 +960,13 @@
        "1                 3:06  \n",
        "2                 2:55  \n",
        "..                 ...  \n",
-       "369               2:31  \n",
-       "370               6:38  \n",
-       "371               2:59  \n",
-       "372               2:40  \n",
-       "373               2:49  \n",
+       "374               2:31  \n",
+       "375               6:38  \n",
+       "376               2:59  \n",
+       "377               2:40  \n",
+       "378               2:49  \n",
        "\n",
-       "[526 rows x 16 columns]"
+       "[532 rows x 16 columns]"
       ]
      },
      "execution_count": 20,
