--- a/Storytelling.ipynb
+++ b/Storytelling.ipynb
@@ -1,82 +1,58 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69072795-bab1-455c-95cc-ec5b8f24c7d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# STORYTELLING"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "39bd1dd8-8a54-468c-80ef-d28dd70a989f",
+   "id": "3e5b6cc6-344a-4bc0-8d6b-8b0c849566b4",
    "metadata": {},
    "source": [
-    "Motivación del Proyecto\n",
+    "### Motivación del proyecto\n",
     "\n",
-    "Se ha escogido la música como tema principal del proyecto.  Esto con el objetivo de entender mejor cómo se comportan las canciones más populares en distintas listas alrededor del mundo. Se han escogido 4 listas, las más importantes a nuestro parecer: Billboard Hot 100, Los 40 Principales, UK Top 100, Shazam Top 200. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66386f4e-fc51-47b0-ad73-8efc5e538fe0",
-   "metadata": {},
-   "source": [
-    "Alcance del Proyecto\n",
+    "Se ha escogido la música como tema principal del proyecto.  Esto con el objetivo de entender mejor cómo se comportan las canciones más populares en distintas listas alrededor del mundo. Se han escogido 4 listas, las más importantes a nuestro parecer: Billboard Hot 100, Los 40 Principales, UK Top 100, Shazam Top 200. \n",
     "\n",
+    "### Alcance del Proyecto\n",
     "Realizar un proceso ETL completo sobre información musical:\n",
     "\n",
-    "    • Extracción: se buscó documentación en la web acerca de la extracción de la API de Spofify (https://developer.spotify.com/documentation/web-api) y su repositorio (https://github.com/spotipy-dev/spotipy/blob/2.22.1/TUTORIAL.md). Se tuvo que buscar las claves de usuarios y peticiones de tokens para cargar toda la información en un json.\n",
+    "•\tExtracción: se buscó documentación en la web acerca de la extracción de la API de Spofify (https://developer.spotify.com/documentation/web-api) y su repositorio (https://github.com/spotipy-dev/spotipy/blob/2.22.1/TUTORIAL.md). Se tuvo que buscar las claves de usuarios y peticiones de tokens para cargar toda la información en un json.\n",
     "Se definieron las columnas a extraer sobre las 4 playlists escogidas: \"track_name\", \"track_popularity\", \"duration_ms\", \"artist_name\", \"artist_genres\", \"artist_popularity\", \"feats\", \"explicit\", \"album\", \"type\", \"relase_date\", \"track_id\", \"artist_id\", \"list\". Todo se guardó en un DataFrame y se guardó en un archivo .CSV (\"top_charts.csv\").\n",
     "\n",
-    "    • Transformación:\n",
+    "•\tTransformación:\n",
     "Limpieza de nombres de canciones: se eliminaron partes como (feat. ...) o (with ...) de los nombres de canciones para estandarizar.\n",
     "Separación de géneros: se dividió la columna artist_genres (que tenía géneros separados por \"|\") en listas de géneros individuales. Se utilizó .explode() y se guardó en un nuevo DataFrame (df_exploded).\n",
     "Conversión de fecha: se convirtió la columna relase_date (fecha de lanzamiento) a formato de fecha (datetime), considerando diferentes formatos posibles.\n",
     "Transformación de texto: se pasaron los nombres de canciones (track_name) a minúsculas para evitar duplicados.\n",
     "Todo se guardó en un DataFrame y se guardó en un archivo .CSV (\"df_trans.csv \"). \n",
     "\n",
-    "    • Carga: No aplica.\n",
-    "    \n",
-    "    • Visualización: análisis de información a través de gráficos."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "67c3f756-df97-41ad-a42f-584e6b256493",
-   "metadata": {},
-   "source": [
-    "Herramientas Usadas\n",
+    "•\tCarga: No aplica.\n",
     "\n",
-    "    • Lenguaje: Python\n",
-    "    • Librerías principales:\n",
-    "        ◦ requests, os, dotenv: para extracción vía API\n",
-    "        ◦ pandas, numpy, json\n",
-    "        ◦ matplotlib, seaborn\n",
-    "    • Spotify API: fuente de datos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d3dd2cd-d5f5-40eb-b301-48f25d57c9ca",
-   "metadata": {},
-   "source": [
-    "Desafíos y Resoluciones\n",
+    "•\tVisualización: análisis de información a través de gráficos.\n",
     "\n",
-    "En la etapa etapa de \"Transformación\" \n",
-    "el desafío fué el Formato inconsistente en fechas (relase_date)\n",
-    "y la solución fué usar format='mixed' con pd.to_datetime"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47c79dd2-a84d-4b90-906d-ed8229dff405",
-   "metadata": {},
-   "source": [
-    "Esquema del Proyecto\n",
+    "### Herramientas Usadas\n",
+    "- Lenguaje: Python\n",
+    "- Librerías principales:\n",
+    "  requests, os, dotenv: para extracción vía API,\n",
+    "  pandas, numpy, json,\n",
+    "  matplotlib, seaborn,\n",
+    "  Spotify API: fuente de datos\n",
+    "\n",
+    "### Desafíos\n",
+    "\n",
+    "Etapas:\n",
+    "Extracción\n",
+    "- Credenciales-tokens: (Paula)\n",
+    "\n",
+    "Transformación\n",
+    "\n",
+    "- Uso .explode():\n",
+    "- Jupyter vs visual studio:\n",
+    "\n",
+    "Visualización\n",
+    "\n",
+    "- Uso subset: (Paula)\n",
+    "- Canción APT. más repetida entre listas. Si bien trabajamos con 4 listas, esta canción aparece 5 veces debido a que en la lista de Shazam se repite 2 veces. Esto es debido a que la misma canción tiene dos diferentes “track_id”.\n",
+    "- Escoger el objetivo que se quería mostrar y el gráfico adecuado para mostrarlo. Por ejemplo, para representar de mejor manera la duración de canciones se optó por un violinplot porque muestra tanto la mediana como la distribución. \n",
+    "- Versiones de paquetes diferentes generaban distintas visualizaciones. Algunas funciones como sns.histplot() o sns.jointplot() se comportaban distinto dependiendo de la versión instalada.\n",
+    " \n",
+    "### Esquema del Proyecto\n",
     "\n",
     "1. Carga de credenciales desde .env\n",
     "2. Extracción de datos con funciones API (token, playlist, artista, canciones)\n",
@@ -87,37 +63,58 @@
     "   - División de géneros\n",
     "   - Conversión de fechas\n",
     "5. Exportación a CSV\n",
-    "6. Visualización y análisis"
+    "6. Visualización y análisis\n",
+    "\n",
+    "\n",
+    "### Visualizaciones y Resultados\n",
+    "\n",
+    "Datos dados: La popularidad del artista es un dato entregado por Spotify que no depende de la lista.\n",
+    "\n",
+    "Gráfico 1 \"Canciones por lista\" (plot.pie): muestra el porcentaje de canciones que aporta cada lista (e.g., Billboard, UK Top 100, Shazam 200, 40 Principales) al dataset total. \n",
+    "\n",
+    "Gráfico 2 \"Artistas más populares\" (sns.barplot): muestra los 10 artistas con mayor popularidad en el dataset, basada en la métrica artist_popularity entregada por la API. Los tres primeros son Bad Bunny, Drake y The Weekend.\n",
+    "\n",
+    "Gráfico 3 \"Canciones más popular en cada lista\" (sns.barplot): muestra las canciones de más populares por lista. La canción más popular de todas es “ordinary” de Alex Warren con una popularidad de 69 de la lista Billboard. La menos popular es “dior” de MK con una popularidad de 85 de la list\ta UK Top 100.\n",
+    "\n",
+    "Gráfico 4 \"Popularidad de Artista vs Canción\" (sns.joinplot):  muestra la dispersión entre la popularidad del artista vs la popularidad de la canción. Hay una correlación positiva clara entre la popularidad del artista y la popularidad de las canciones. Los puntos forman una tendencia diagonal ascendente, indicando que artistas más populares tienden a tener canciones más populares. La mayoría de los datos se concentran en la zona de 50-100 de popularidad del artista y 60-100 de popularidad de la canción, formando un cluster principal. Los artistas más populares con canciones más populares corresponden a las listas Billboard y UK Top 100, en verde y naranja respetivamente, mientras que la lista de los 40 principales y Shazam están más repartidas.\n",
+    "\n",
+    "Gráfico 5 \"Popularidad de Canción por lista\" (sns.boxplot): muestra la popularidad de canción por lista donde UK top100 y Billboard son las más populares. La mediana de UK top 100 es la más alta. También se puede observar outliers muy alejados de la media de los datos en las listas de UK top 100 y Shazam.\n",
+    "\n",
+    "Gráfico 6 “Distribución de Popularidad de Artistas” (sns.histplot): muestra la distribución de la popularidad de artistas donde el sesgo está cargado a la derecha por lo que la gran mayoría de los artistas tienen alta popularidad. Su mediana está en 82.\n",
+    "\n",
+    "Gráfico 7 \"Distribución de la popularidad de los artistas por país\" (sns.histplot): muestra la distribución de la popularidad de artistas por lista. Las listas de UK top 100, Billboard y Shazam muestran una distribución sesgada a la derecha con artistas con popularidad alrededor del 80. A medida que aumenta la popularidad, aumenta la cantidad de artistas. En cambio la lista de los 40 principales hay dos picos: la primera está alrededor de 50 y la segunda alrededor de 85.\n",
+    "\n",
+    "Gráfico 8 “Canciones con colaboraciones en cada lista” (sns.barplot): muestra la lista que contiene más canciones con colaboraciones de otros artistas (feats). Shazam es la lista con mayor cantidad de colaboraciones con casi 51, los 40 principales contiene 20.\n",
+    "\n",
+    "Gráfico 9 \"Distribución de duración por lista\" (sns.violinplot): muestra la duración de canciones por lista. Todas las listas tienen medianas similares (entre 3-3.5 minutos) Los 40 Principales es la más restrictiva en términos de duración, mientras que Shazam permite mayor diversidad en la duración de las canciones.\n",
+    "\n",
+    "Gráfico 10 “Distribución de la popularidad de canciones por listas y género” (sns.barplot): muestra los 5 géneros más representados por listas. El flamenco pop solo está presente en los 40 principales, mientras que el country está UK Top 100 y Billboard. El género con las canciones más populares en todas las listas es el k-pop. Los 40 principales refleja preferencias más locales. UK top 100 es más electrónico, Billboard es más conservador y Shazam es más diversa por la barras de error más amplias.\n",
+    "\n",
+    "Gráfico 11 “Géneros más representados por país” (plt.subplots): muestra los géneros más representados por país. UK es más electrónico con house, Billboard como es de EE.UU. es country el más representado y los 40 principales se puede ver canciones en español con dominancia del flamenco y sus subgéneros (flamenco pop, flamenco urbano). Shazam tiene una mayor variabilidad de los géneros explicando el gráfico anterior (barras de error), debido también a que es global.\n",
+    "\n",
+    "Gráfico 12 “Canciones más repetidas entre las listas” (sns.countplot): muestra las canciones que se repiten más veces. 6 canciones aparecen en todas las listas. En el caso de Apt aparece 5 veces por que en la lista de Shazam aparece con con dos track_id diferentes (uno como álbum y otro como single).\n",
+    "\n",
+    "Gráfico 13 “Artistas más repetidos teniendo en cuenta los feats” (sns.countplot): muestra el artista que más veces aparece es Morgan Wallen con 15 apariciones.\n",
+    "\n",
+    "Gráfico 14 “Artistas más repetidos teniendo en cuenta los feats por país” (plt.subplot): se puede ver que hay una distribución con cola en Billboard, Shazam y los 40 principales. El artista más repetido en la gráfica 13, Morgan Wallen con 15, pero solo aparece en Billboard. En UK top 100, los artistas más representados se repiten 3 veces. En los otros dos hay un claro artista dominante: Elena Vargas en los 40 principales y Greecia en Shazam con 8 apariciones. En los 40 principales hay una gran representación de artistas latinos, mientras que en los otros hay solo de habla inglesa.\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7676ce8c-4b98-47dc-9c05-64139cb77fff",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec2c9c4-5d5a-4a50-8b64-59f2103874df",
    "metadata": {},
-   "source": [
-    "Visualizaciones y Resultados\n",
-    "\n",
-    "- Gráfico 1 (plot.pie) muestra el % de las canciones por lista sobre el total.\n",
-    "- Gráfico 2 (sns.barplot) muestra los 10 primeros artistas más populares sobre el total. \n",
-    "- Gráfico 3 (sns.barplot) muestra la dispersión entre la popularidad del artista vs la popularidad de la canción.\n",
-    "- Gráfico 4 (sns.boxplot) muestra la distribución de popularidad por lista. Se puede ver que UK top 100 y Billboard 100 contienen las canciones más populares.\n",
-    "- Gráfico 5 (sns.violinplot) muestra la duración de canciones por lista. UK top 100 contiene las canciones con mayor duración, aunque el Shazam 200 tiene la canción más larga de la muestra. \n",
-    "- Gráfico 6 (sns.barplot)\n",
-    "- Gráfico 7 (sns.histplot) muestra la distribución de popularidad de los artistas. La distribución está cargada hacia la derecha por lo que la gran mayoría de los artistas tienen alta popularidad. \n",
-    "- Gráfico 8 (sns.jointplot)\n",
-    "- Gráfico 9 (sns.countplot) muestra el top 10 de géneros musicales con más canciones. \n",
-    "- Gráfico 10 (sns.barplot) muestra la popularidad por género (top 5).\n",
-    "- Gráfico 11 (plt.subplots) muestra la distribución de popularidad por artista por país. UK y EE.UU. están sesgada hacia la derecha por lo que tienen artistas más populares, mientras que España tiene 2 picos.\n",
-    "- Gráfico 12 (plt.suptitle) muestra los géneros más representados por país. UK es house, EE.UU. es country, España flamenco pop y Shazam es EDM.\n",
-    "- Gráfico 13 (sns.countplot) muestra las canciones más repetidas por país."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -129,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
