--- a/Storytelling.ipynb
+++ b/Storytelling.ipynb
@@ -12,13 +12,20 @@
     "### Alcance del Proyecto\n",
     "Realizar un proceso ETL completo sobre información musical:\n",
     "\n",
-    "•\tExtracción: se buscó documentación en la web acerca de la extracción de la API de Spofify (https://developer.spotify.com/documentation/web-api) y su repositorio (https://github.com/spotipy-dev/spotipy/blob/2.22.1/TUTORIAL.md). Se tuvo que buscar las claves de usuarios y peticiones de tokens para cargar toda la información en un json.\n",
+    "•\tExtracción: \n",
+    "\n",
+    "Se buscó documentación en la web acerca de la extracción de la API de Spofify (https://developer.spotify.com/documentation/web-api) y su repositorio (https://github.com/spotipy-dev/spotipy/blob/2.22.1/TUTORIAL.md). Se tuvo que buscar las claves de usuarios y peticiones de tokens para cargar toda la información en un json.\n",
+    "\n",
     "Se definieron las columnas a extraer sobre las 4 playlists escogidas: \"track_name\", \"track_popularity\", \"duration_ms\", \"artist_name\", \"artist_genres\", \"artist_popularity\", \"feats\", \"explicit\", \"album\", \"type\", \"relase_date\", \"track_id\", \"artist_id\", \"list\". Todo se guardó en un DataFrame y se guardó en un archivo .CSV (\"top_charts.csv\").\n",
     "\n",
     "•\tTransformación:\n",
+    "\n",
     "Limpieza de nombres de canciones: se eliminaron partes como (feat. ...) o (with ...) de los nombres de canciones para estandarizar.\n",
-    "Separación de géneros: se dividió la columna artist_genres (que tenía géneros separados por \"|\") en listas de géneros individuales. Se utilizó .explode() y se guardó en un nuevo DataFrame (df_exploded).\n",
+    "Separación de géneros: se dividió la columna artist_genres (que tenía géneros separados por \"|\") en listas de géneros individuales. \n",
+    "Se utilizó .explode() y se guardó en un nuevo DataFrame (df_exploded).\n",
+    "\n",
     "Conversión de fecha: se convirtió la columna relase_date (fecha de lanzamiento) a formato de fecha (datetime), considerando diferentes formatos posibles.\n",
+    "\n",
     "Transformación de texto: se pasaron los nombres de canciones (track_name) a minúsculas para evitar duplicados.\n",
     "Todo se guardó en un DataFrame y se guardó en un archivo .CSV (\"df_trans.csv \"). \n",
     "\n",
@@ -42,12 +49,12 @@
     "\n",
     "Transformación\n",
     "\n",
-    "- Uso .explode():\n",
+    "- Uso .explode(): se aplicó sobre la columna 'artist_genres' ya que si no se usaba .explode(), todos los géneros estaban juntos en una celda como string, lo que hacía imposible analizarlos correctamente.\n",
     "- Jupyter vs visual studio:\n",
     "\n",
     "Visualización\n",
     "\n",
-    "- Uso subset: (Paula)\n",
+    "- Uso subset: se aplican subsets del dataframe original con cada una de las listas por separado para filtrar. Con esto se puede hacer una mejor visualización de los datos para obtener información más precisa por país. \n",
     "- Canción APT. más repetida entre listas. Si bien trabajamos con 4 listas, esta canción aparece 5 veces debido a que en la lista de Shazam se repite 2 veces. Esto es debido a que la misma canción tiene dos diferentes “track_id”.\n",
     "- Escoger el objetivo que se quería mostrar y el gráfico adecuado para mostrarlo. Por ejemplo, para representar de mejor manera la duración de canciones se optó por un violinplot porque muestra tanto la mediana como la distribución. \n",
     "- Versiones de paquetes diferentes generaban distintas visualizaciones. Algunas funciones como sns.histplot() o sns.jointplot() se comportaban distinto dependiendo de la versión instalada.\n",
