--- a/Storytelling.ipynb
+++ b/Storytelling.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Etapas:\n",
     "Extracción\n",
-    "- Credenciales-tokens: (Paula)\n",
+    "- Credenciales-tokens: Una de las principales dificultades al lidiar con la API de Spotify fue el manejo de las credenciales de acceso necesarias para autorizar las solicitudes a la plataforma. Spotify requiere un ID de cliente y un secreto de cliente, que se obtienen al registrar una aplicación en el Panel de desarrollador de Spotify. Para gestionar esto, se utilizó un archivo .env, un enfoque estándar para mantener las variables de entorno locales y seguras. Esto hace que las variables sean accesibles al código a través de una biblioteca como dotenv, e implica asegurarse de que el archivo .env se coloque en la raíz del proyecto y se cargue antes de intentar utilizar las variables.\n",
     "\n",
     "Transformación\n",
     "\n",
