--- a/extraccion.ipynb
+++ b/extraccion.ipynb
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "# Obtener las credenciales del archivo .env\n",
-    "CLIENT_ID='540ba0d5c2564cdeb246ace0d1ada7cf'\n",
-    "CLIENT_SECRET='dcad0c99f6304377b3980b8a811ffe9e'\n",
+    "CLIENT_ID= # Cada uno poner el suyo\n",
+    "CLIENT_SECRET= # Cada uno poner el suyo\n",
     "\n",
     "# Verificar que las variables se cargaron correctamente\n",
     "if not CLIENT_ID or not CLIENT_SECRET:\n",
